--- a/contact_de.html
+++ b/contact_de.html
@@ -24,20 +24,33 @@
         </div>
     </div>
     <div class="contact-content">
-    <img src="img/CONTACT_03.png" alt="LINYER Bild" style="max-width: 800px; width: 100%; height: auto; margin: 20px auto; display: block;" /><br/>
+    <img src="img/CONTACT_03.jpeg" alt="LINYER Bild" style="max-width: 800px; width: 100%; height: auto; margin: 20px auto; display: block;" /><br/>
     <br/>
-        LINYER ist ein Architekturbüro mit Sitz in Stockholm und Zürich, gegründet und betrieben von Lowis Gujer und Emma Lindén seit 2024. In ihrem Schaffen legen sie den Fokus auf kleine Projekte mit lokalen Akteuren und natürlichen Baumaterialien. Oftmals sind sie auf der Suche nach architektonischer Formgebung, die mit den vorliegenden Ressourcen zusammenhängen: Weiterbauen, Wiederverwenden, und wenn Neu, dann mit biogenen Baumaterialien wie zum Beispiel Holz. Ihr Interessen umfassen eine breite Palette von Themen wie Entwürfe für öffentliche Gebäude und Bildungseinrichtungen, konstruktive Detaillösungen im Massstab 1:1, Visualisierung von Ideen durch Illustrationen und Modelle, Lehre und öffentliche Workshops, Stadtplanung und Schreiben. Neben ihrem Engagement für LINYER sind beide auch in anderen Projekten aktiv. Lowis ist als wissenschaftlicher Assistent am Lehrstuhl für Architectural Behaviorology bei Prof. Momoyo Kaijima am Institut für Design und Architektur D-ARCH ETHZ tätig. Emma arbeitet als Projektleiterin für SAKKE Studio in den frühen Projektphasen.<br/>
+        LINYER ist ein Architekturbüro mit Sitz in Stockholm und Zürich, gegründet und betrieben von Lowis Gujer und Emma Lindén seit 2024. 
+        In ihrem Schaffen legen sie den Fokus auf kleine Projekte mit lokalen Akteuren und natürlichen Baumaterialien. 
+        Oftmals sind sie auf der Suche nach architektonischer Formgebung, die mit den vorliegenden Ressourcen zusammenhängen: 
+        Weiterbauen, Wiederverwenden, und wenn Neu, dann mit biogenen Baumaterialien wie zum Beispiel Holz. 
+        Ihr Interessen umfassen eine breite Palette von Themen wie Entwürfe für öffentliche Gebäude und Bildungseinrichtungen, 
+        konstruktive Detaillösungen im Massstab 1:1, Visualisierung von Ideen durch Illustrationen und Modelle, Lehre und öffentliche Workshops, 
+        Stadtplanung und Schreiben. Neben ihrem Engagement für LINYER sind beide auch in anderen Projekten aktiv. 
+        Emma arbeitet als Projektleiterin für SAKKE Studio in den frühen Projektphasen.
+        Lowis ist als wissenschaftlicher Assistent am Lehrstuhl für Architectural Behaviorology bei Prof. Momoyo Kaijima am 
+        Institut für Design und Architektur D-ARCH ETHZ tätig.<br/>
         <br/>
         Emma Lindén (geb. 1994, Stockholm SE) ist Architektin SAR/MSA. Während ihres Studiums an der Königlichen Technischen Hochschule Stockholm absolvierte sie ein Austauschjahr an der ETHZ. Sie arbeitete für General Architecture, Lütjens Padmanabhan, Maich Swift und Boltshauser Architekten, bevor sie zu SAKKE Studio wechselte.<br/>
         <br/>
         Lowis Gujer (geb. 1995, Zürich CH) ist Architekt MSc Arch. ETHZ. Er schloss sein Studium an der ETHZ mit einer Diplomarbeit zum Thema „Eine Stadt ohne Schlachthof?“ unter der Leitung von Prof. Momoyo Kaijima ab. Nach Erfahrungen in Architekturbüros in Zürich, Stockholm und London arbeitet er seit Anfang 2024 am Lehrstuhl für Architectural Behaviorology. Dort ist er als wissenschaftlicher Assistent für den Entwurfskurs im zweiten Jahr, den Masterkurs "Japan Studio" und weitere Lehrprojekte tätig.<br/>
         <br/>
+        <br/>
     <span>KONTAKT</span>
+    <br/>
         contact@linyer.info<br/>
         4. OG Neue Hard 12<br/>
         CH-8004 Zürich<br/>
         <br/>
+        <br/>
     <span>PROJEKTLISTE</span>
+        <br/>
         2504 - HUSA<br/>
         Renovation eines Blockhauses in Hälsingland, Schweden, 2025, Studie<br/>
         Bauherrschaft: Privat<br/>
@@ -98,32 +111,36 @@
         Ferienhaus in Dalarna, Schweden, 2021, Realisiert<br/>
         Bauherrschaft: Privat<br/>
         <br/>
+        <br/>
     <span>LEHRE</span>
-        <a href="https://kaijima.arch.ethz.ch/academic_year/fs24/?filter=1"></a>JAPAN STUDIO 3 "STONE, WOOD, SOIL"</a>
-        Lehrassistent für den Entwurfskurs im Master am Lehrstuhl für Architectural Behaviorology, D-ARCH, ETHZ, 2025
+    <br/>
+        <a href="https://kaijima.arch.ethz.ch/news/call-for-entries-japan-studio-iii-seminar-week-25hs-feldis-veulden/">JAPAN STUDIO 3 "STONE, WOOD, SOIL"</a>
+        Lehrassistent für den Entwurfskurs im Master am Lehrstuhl für Architectural Behaviorology, D-ARCH, ETHZ, 2025<br/>
         <br/>
-        <a href="https://kaijima.arch.ethz.ch/academic_year/fs24/?filter=1"></a>BAMBUS GEWÄCHSHAUS</a>
-        Lehrassistent für den Workshop im Master am Lehrstuhl für Architectural Behaviorology, D-ARCH, ETHZ, 2025
+        <a href="https://kaijima.arch.ethz.ch/news/call-for-summer-workshop-bamboo-greenhouse/">BAMBUS GEWÄCHSHAUS</a>
+        Lehrassistent für den Workshop im Master am Lehrstuhl für Architectural Behaviorology, D-ARCH, ETHZ, 2025<br/>
         <br/>
-        <a href="https://kaijima.arch.ethz.ch/news/call-for-focus-work-climate-kitchen/"></a>KLIMA KÜCHE</a>
-        Lehrassistent für den Workshop im Master am Lehrstuhl für Architectural Behaviorology, D-ARCH, ETHZ, 2025
+        <a href="https://kaijima.arch.ethz.ch/news/call-for-focus-work-climate-kitchen/">KLIMA KÜCHE</a>
+        Lehrassistent für den Workshop im Master am Lehrstuhl für Architectural Behaviorology, D-ARCH, ETHZ, 2025<br/>
         <br/>
-        <a href="https://systems.arch.ethz.ch/studios-workshops/design-for-climate-202"></a>DESIGN FOR CLIMATE</a>
+        <a href="https://systems.arch.ethz.ch/studios-workshops/design-for-climate-202">DESIGN FOR CLIMATE</a>
         Lehrassistent für den Entwurfskurs im Master am Lehrstuhl für Architectural Behaviorology, D-ARCH, ETHZ, Zürich, Schweiz, 2024<br/>
         <br/>
-        <a href="https://kaijima.arch.ethz.ch/academic_year/fs24/?filter=1"></a>JAPAN STUDIO 2 "CARE HUBS"</a>
+        <a href="https://www.otelfingen.ch/gemeinde/aktuelles/projekte/care-hubs-neue-orte-der-begegnung-fuer-otelfingen.html/1245">JAPAN STUDIO 2 "CARE HUBS"</a>
         Lehrassistent für den Entwurfskurs im Master am Lehrstuhl für Architectural Behaviorology, D-ARCH, ETHZ, Zürich, Schweiz, 2024<br/>
         <br/>
         <a href="https://kaijima.arch.ethz.ch/academic_year/fs24/?filter=1"></a>PUBLIC SPACE BEHAVIOROLOGY</a>
         Lehrassistent für den Entwurfskurs im zweiten Jahr am Lehrstuhl für Architectural Behaviorology, D-ARCH, ETHZ, Zürich, Schweiz, 2024<br/>
         <br/>
-    <span>PUBLIKATION</span>
+        <br/>
+    <span>PUBLIKATIONEN</span>
+    <br/>
         BERGDÖRFER UND IHRE MÖGLICHE ENTWICKLUNG<br/>
         Interview in der Lokalzeitung "Pöschtli" über das Japan Studio 3 "STONE, WOOD, SOIL" im Rahmen des Lehrprojekts Domleschg, Schweiz, 2025<br/>
-        mit Stefan Kurath, Thomas Weiss, Michael Wagner, Oscar Buscon, Kees Christiaanse
+        mit Stefan Kurath, Thomas Weiss, Michael Wagner, Oscar Buscon, Kees Christiaanse<br/>
         <br/>
         <a href="https://www.hochparterre.ch/nachrichten/planung-staedtebau/die-saeulenhalle-endlich-ein-zentrum-fuer-zuerich-west">2407 - DIE SÄULENHALLE: Endlich ein Zentrum für Zürich West!</a>
-        Arbeitsgruppe und Illustrationen für ein Themenheft des Architekturmagazins Hochparterre, Zürich, Schweiz, 2025<br/>
+        Themenheft des Architekturmagazins Hochparterre, Zürich, Schweiz, 2025<br/>
         Arbeitsgruppe: Martin Hofer (Architekt und Immobilienfachmann, Leiter und Konzeptverfasser), Köbi Gantenbein (Soziologem, Leiter und Sekretär), Dominique Ghiggi (Landschaftsarchitektin, Ghiggi Paesaggi Landschaft und Städtebau, Zürich), Christoph Gysi (Präsident der "Vereinigung Industrict Zürich West, aus Industrie wird Kultur", Zürich), Christoph Kellenberger (Architekt und Gründungspartner Büro OOS, Zürich), Markus Knauss (Co-Geschäftsleiter des Verkehrs-Clubs der Schweiz und Gemeinderat), Maresa Kuhn (Stadt- und Projektentwicklerin im Büro Belebung & Begegnung, Zürich), Jordi Riegg (Raum- und Verkehrsplaner im Büro Rombo, Zürich), Alain Thierstein (Stadtentwickler, Delegierter Hamasil Stiftung), Hamasil Stiftung (Auftraggeberin, Finanzierung)<br/>
         <a href="https://nandovonarb.ch/">Illustrationen mit Nando von Arb</a>
         <br/>
