--- a/contact_sv.html
+++ b/contact_sv.html
@@ -24,20 +24,26 @@
         </div>
     </div>
     <div class="contact-content">
-    <img src="img/CONTACT_03.png" alt="LINYER Bild" style="max-width: 800px; width: 100%; height: auto; margin: 20px auto; display: block;" /><br/>
+    <img src="img/CONTACT_03.jpeg" alt="LINYER Bild" style="max-width: 800px; width: 100%; height: auto; margin: 20px auto; display: block;" /><br/>
     <br/>
-        LINYER är ett arkitektkontor med säte i Stockholm och Zürich, grundat och drivet av Lowis Gujer och Emma Lindén sedan 2024. I deras arbete ligger fokus på lokala och småskaliga projekt samt användning av naturliga byggmaterial. Ofta söker de en arkitektonisk form som förhåller sig till de resurser som finns: att bygga vidare, återanvända, och om nytt – då i biogena material såsom trä. Deras intressen spänner över bland annat förslag för offentliga byggnader och utbildningslokaler, konstruktiva detaljlösningar i skala 1:1, visualisering av idéer genom illustrationer och modeller, undervisning och offentliga workshops, stadsplanering och skrivande. Förutom sitt arbete i LINYER är båda delaktiga i andra projekt. Lowis är verksam som vetenskaplig assistent vid Chair of Architectural Behaviorology hos Prof. Momoyo Kaijima vid Institutionen för design och arkitektur D-ARCH, ETHZ. Emma arbetar som projektledande arkitekt på SAKKE Studio i de tidiga projektskeden.<br/>
+        LINYER är ett arkitektkontor med säte i Stockholm och Zürich, grundat och drivet av Lowis Gujer och Emma Lindén sedan 2024. 
+        I deras arbete ligger fokus på lokala och småskaliga projekt samt användning av naturliga byggmaterial. 
+        Ofta söker de en arkitektonisk form som förhåller sig till de resurser som finns: vidarebyggnad, återanvändning, och om nytt – då i biogena material såsom trä. 
+        Deras intressen inkluderar förslag för offentliga byggnader och utbildningslokaler, konstruktiva detaljlösningar i skala 1:1, visualisering av idéer genom illustrationer och modeller, undervisning och offentliga workshops, stadsplanering och skrivande. 
+        Förutom sitt arbete i LINYER är båda aktiva i andra projekt. Lowis är verksam som vetenskaplig assistent vid Chair of Architectural Behaviorology hos Prof. Momoyo Kaijima vid Institutet för design och arkitektur D-ARCH, ETHZ. Emma arbetar som projektledande arkitekt på SAKKE Studio i de tidiga projektskeden.<br/>
         <br/>
         Emma Lindén (f. 1994, Stockholm SE) är arkitekt SAR/MSA. Under sina studier vid Kungliga Tekniska Högskolan i Stockholm genomförde hon ett utbytesår vid ETHZ. Hon har arbetat på General Architecture, Lütjens Padmanabhan, Maich Swift och Boltshauser Architekten innan hon började på SAKKE Studio.<br/>
         <br/>
         Lowis Gujer (f. 1995, Zürich CH) är arkitekt MSc Arch. ETHZ. Han avslutade sina studier vid ETHZ med ett examensarbete med titeln "Eine Stadt ohne Schlachthof?" under ledning av Prof. Momoyo Kaijima. Efter erfarenheter från arkitektkontor i Zürich, Stockholm och London arbetar han sedan början av 2024 vid Chair of Architectural Behaviorology. Där är han vetenskaplig assistent för designkursen i år 2, masterkursen "Japan Studio" och andra undervisningsprojekt.<br/>
         <br/>
     <span>KONTAKT</span>
+    <br/>
         contact@linyer.info<br/>
         4. OG Neue Hard 12<br/>
         CH-8004 Zürich<br/>
         <br/>
     <span>PROJEKTLISTA</span>
+    <br/>
         2504 - HUSA<br/>
         Renovering av ett timmerhus i Hälsingland, Sverige, 2025, studie<br/>
         Beställare: Privat<br/>
@@ -60,7 +66,7 @@
         med Alois Merkt och Zoé Rüttimann<br/>
         Beställare: SBB Immobilien<br/>
         <br/>
-        2404 - PÅBYGGNAD OCH KOMPLETTERING<br/>
+        2404 - AUFSTOCKEN UND ERGÄNZEN / PÅBYGGNAD OCH KOMPLETTERING<br/>
         Bostadsbyggande i Zürich, Schweiz, 2024, tävling<br/>
         Landskapsarkitektur: Lars Ruge<br/>
         Beställare: Byggnadsföreningen Waidberg BGW<br/>
@@ -71,7 +77,7 @@
         Landskapsarkitektur: Lauro Nächt<br/>
         Byggledning: Bauseits Partner AG<br/>
         Byggingenjör: Synaxis AG<br/>
-        VVS: 3-Plan AG<br/>
+        HLKS/VVS: 3-Plan AG<br/>
         Brandskydd: Zostera Brandschutzplanung GmbH<br/>
         Beställare: Einwohnergemeinde Cham<br/>
         <br/>
@@ -99,11 +105,12 @@
         Beställare: Privat<br/>
         <br/>
     <span>UNDERVISNING</span>
-        <a href="https://kaijima.arch.ethz.ch/academic_year/fs24/?filter=1">JAPAN STUDIO 3 "STONE, WOOD, SOIL"</a>
+    <br/>
+        <a href="https://kaijima.arch.ethz.ch/news/call-for-entries-japan-studio-iii-seminar-week-25hs-feldis-veulden/">JAPAN STUDIO 3 "STONE, WOOD, SOIL"</a>
         Undervisningsassistent för masterkursen i design vid Chair of Architectural Behaviorology, D-ARCH, ETHZ, 2025<br/>
         <br/>
-        <a href="https://kaijima.arch.ethz.ch/academic_year/fs24/?filter=1">BAMBUS GEWÄCHSHAUS</a>
-        Undervisningsassistent för workshop i masterprogrammet vid Chair of Architectural Behaviorology, D-ARCH, ETHZ, 2025<br/>
+        <a href="https://kaijima.arch.ethz.ch/news/call-for-summer-workshop-bamboo-greenhouse/">BAMBUS GEWÄCHSHAUS</a>
+        Undervisningsassistent för workshopen i masterprogrammet vid Chair of Architectural Behaviorology, D-ARCH, ETHZ, 2025<br/>
         <br/>
         <a href="https://kaijima.arch.ethz.ch/news/call-for-focus-work-climate-kitchen/">KLIMAKÖKET</a>
         Undervisningsassistent för workshop i masterprogrammet vid Chair of Architectural Behaviorology, D-ARCH, ETHZ, 2025<br/>
@@ -111,40 +118,39 @@
         <a href="https://systems.arch.ethz.ch/studios-workshops/design-for-climate-202">DESIGN FOR CLIMATE</a>
         Undervisningsassistent för masterkursen i design vid Chair of Architectural Behaviorology, D-ARCH, ETHZ, Zürich, Schweiz, 2024<br/>
         <br/>
-        <a href="https://kaijima.arch.ethz.ch/academic_year/fs24/?filter=1">JAPAN STUDIO 2 "CARE HUBS"</a>
+        <a href="https://www.otelfingen.ch/gemeinde/aktuelles/projekte/care-hubs-neue-orte-der-begegnung-fuer-otelfingen.html/1245">JAPAN STUDIO 2 "CARE HUBS"</a>
         Undervisningsassistent för masterkursen i design vid Chair of Architectural Behaviorology, D-ARCH, ETHZ, Zürich, Schweiz, 2024<br/>
         <br/>
         <a href="https://kaijima.arch.ethz.ch/academic_year/fs24/?filter=1">PUBLIC SPACE BEHAVIOROLOGY</a>
         Undervisningsassistent för designkursen i år 2 vid Chair of Architectural Behaviorology, D-ARCH, ETHZ, Zürich, Schweiz, 2024<br/>
         <br/>
-    <span>PUBLIKATION</span>
-        BERGBYAR OCH DESS MÖJLIGA UTVECKLING<br/>
+    <span>PUBLIKATIONER</span>
+    <br/>
+        BERGDÖRFER OCH DESS MÖJLIGA UTVECKLING<br/>
         Intervju i den lokala tidningen "Pöschtli" om Japan Studio 3 "STONE, WOOD, SOIL" inom ramen för undervisningsprojektet Domleschg, Schweiz, 2025<br/>
         med Stefan Kurath, Thomas Weiss, Michael Wagner, Oscar Buscon, Kees Christiaanse<br/>
         <br/>
-        <a href="https://www.hochparterre.ch/nachrichten/planung-staedtebau/die-saeulenhalle-endlich-ein-zentrum-fuer-zuerich-west">2407 - DIE SÄULENHALLE: Äntligen ett centrum för Zürich West!</a>
-        Arbetsgrupp och illustrationer för ett temanummer av arkitekturtidskriften Hochparterre, Zürich, Schweiz, 2025
+        <a href="https://www.hochparterre.ch/nachrichten/planung-staedtebau/die-saeulenhalle-endlich-ein-zentrum-fuer-zuerich-west">2407 - Die Säulenhalle: Äntligen ett centrum för Zürich West!</a>
+        Temanummer av arkitekturtidskriften Hochparterre, Zürich, Schweiz, 2025<br/>
         Arbetsgrupp: Martin Hofer (arkitekt och fastighetsexpert, ledare och konceptförfattare), Köbi Gantenbein (sociolog, ledare och sekreterare), Dominique Ghiggi (landskapsarkitekt, Ghiggi Paesaggi, Zürich), Christoph Gysi (ordförande för "Vereinigung Industrict Zürich West, från industri till kultur", Zürich), Christoph Kellenberger (arkitekt och grundare av kontoret OOS, Zürich), Markus Knauss (medverkande direktör för Verkehrs-Club der Schweiz och kommunalpolitiker), Maresa Kuhn (stads- och projektutvecklare, Belebung & Begegnung, Zürich), Jordi Riegg (rum- och trafikplanerare, Rombo, Zürich), Alain Thierstein (stadsutvecklare, Hamasil-stiftelsen), Hamasil-stiftelsen (uppdragsgivare, finansiering)<br/>
         <a href="https://nandovonarb.ch/">Illustrationer med Nando von Arb</a>
         <br/>
-        Arbetsgrupp och illustration för ett temanummer av Hochparterre, Zürich, Schweiz, 2025<br/>
-        <a href="https://www.furttaler.ch/aktuelles/detail?tx_news_pi1%5Baction%5D=detail&tx_news_pi1%5Bcontroller%5D=News&tx_news_pi1%5Bnews%5D=250118&cHash=5c51538c0a846e16fec72b9e55e24a98">"AS INTERESSE DER OTELFINGER FREUT UNS"</a>
+        <a href="https://www.furttaler.ch/aktuelles/detail?tx_news_pi1%5Baction%5D=detail&tx_news_pi1%5Bcontroller%5D=News&tx_news_pi1%5Bnews%5D=250118&cHash=5c51538c0a846e16fec72b9e55e24a98">"Das Interesse der Otelfingen freut uns"</a>
         Intervju i lokalpressen "Furttaler" om Japan Studio 2 "Care Hubs", Schweiz, 2024<br/>
         <br/>
-        <a href="https://www.hochparterre.ch/campus/eine-stadt-ohne-schlachthof">2302 - EINE STADT UTAN SKLATHUS?</a>
+        <a href="https://www.hochparterre.ch/campus/eine-stadt-ohne-schlachthof">2302 - Eine Stadt ohne Schlachthof?</a>
         Artikel för campussektionen i arkitekturtidskriften Hochparterre, Zürich, Schweiz, 2024<br/>
         <br/>
         <a href="https://trans.ethz.ch/issue/time">2301 - TRANS MAGAZIN #42 TIME</a>
         Redaktion för arkitekturtidskriften trans vid arkitekturdepartementet, ETH, Zürich, Schweiz, 2023<br/>
-        Medredaktörer: Tatjana Bergmeister, Carolina Catarino Gomes, Zoé Rüttimann<br/>
+        Co-redaktörer: Tatjana Bergmeister, Carolina Catarino Gomes, Zoé Rüttimann<br/>
         <br/>
         <a href="https://trans.ethz.ch/issue/fire-1">2203 - TRANS MAGAZIN #41 FIRE</a>
         Redaktion för arkitekturtidskriften trans vid arkitekturdepartementet, ETH, Zürich, Schweiz, 2023<br/>
-        Medredaktörer: Sebastian Baumann, Tatjana Bergmeister, Sophia Garner<br/>
+        Co-redaktörer: Sebastian Baumann, Tatjana Bergmeister, Sophia Garner<br/>
         <br/>
         <a href="https://doi.org/10.5169/seals-981501">2102 - WORK IS OVER</a>
         Artikel för den 38:e utgåvan av trans "REPRODUCTION" vid arkitekturdepartementet, ETH, Zürich, Schweiz, 2021<br/>
-        <br/>
     </div>
 </body>
 </html>
