--- a/work_de.html
+++ b/work_de.html
@@ -86,15 +86,15 @@
     <div class="img-columns">
         <div class="img-col">
             <div class="img-hover-container">
-                <img src="img/INDEX_01.jpg" alt="LINYER Bild" class="hover-img" />
+                <img src="img/INDEX_01.jpeg" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">JAPANSTUDIO 2: CARE HUBS<br/>Masterstudio an der ETHZ mit Chie Konno, Wataru Doi, Yukari Iwata, Erik Fichter</div>
             </div>
             <div class="img-hover-container">
-                <img src="img/INDEX_02.jpg" alt="LINYER Bild" class="hover-img" />
+                <img src="img/INDEX_02.jpeg" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">FOKUSARBEIT: KLIMAKÜCHE<br/>Kurs an der ETHZ mit Prof. Momoyo Kaijima und acht Studierenden<br/>Foto: Yuri Schmid</div>
             </div>
             <div class="img-hover-container">
-                <img src="img/INDEX_03.jpg" alt="LINYER Bild" class="hover-img" />
+                <img src="img/INDEX_03.jpeg" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">FOKUSARBEIT: KLIMAKÜCHE<br/>Kurs an der ETHZ mit Prof. Momoyo Kaijima und acht Studierenden<br/>Foto: Yuri Schmid</div>
             </div>
             <div class="img-hover-container">
@@ -150,15 +150,15 @@
                 <div class="img-hover-text">DER HOLLÄNDER<br/>mit Dalla Santa Birkeland Arkitektur<br/>Musikschule, Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
-                <img src="img/INDEX_33.png" alt="LINYER Bild" class="hover-img" />
+                <img src="img/INDEX_33.jpeg" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">DER HOLLÄNDER<br/>mit Dalla Santa Birkeland Arkitektur<br/>Musikschule, Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
-                <img src="img/INDEX_34.JPG" alt="LINYER Bild" class="hover-img" />
+                <img src="img/INDEX_34.jpeg" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">DER HOLLÄNDER<br/>mit Dalla Santa Birkeland Arkitektur<br/>Musikschule, Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
-                <img src="img/INDEX_35.JPG" alt="LINYER Bild" class="hover-img" />
+                <img src="img/INDEX_35.jpeg" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">DER HOLLÄNDER<br/>mit Dalla Santa Birkeland Arkitektur<br/>Musikschule, Cham, Schweiz</div>
             </div>
                 <div class="img-hover-container">
@@ -182,7 +182,7 @@
                 <div class="img-hover-text">WIEDERVERWENDUNG SNÄCKAN 8<br/>KTH, Stockholm, Schweden</div>
             </div>
             <div class="img-hover-container">
-                <img src="img/INDEX_70.jpg" alt="LINYER Bild" class="hover-img" />
+                <img src="img/INDEX_70.jpeg" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">KERAMIK PAVILLION<br/>Stockholm, Schweden</div>
             </div>
                 <div class="img-hover-container">
