--- a/work_sv.html
+++ b/work_sv.html
@@ -2,45 +2,6 @@
 <html lang="sv">
 <head>
     <style>
-    .fullscreen-overlay {
-        position: fixed;
-        top: 0; left: 0; right: 0; bottom: 0;
-        width: 100vw;
-        height: 100vh;
-        background: #fff;
-        z-index: 9999;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-        align-items: center;
-        animation: fadeIn 0s;
-    }
-    .fullscreen-img {
-        width: 100vw;
-        height: 100vh;
-        object-fit: contain;
-        margin: 0;
-        display: block;
-        background: transparent;
-    }
-    .fullscreen-text {
-        width: 100vw;
-        color: #000;
-        background: #fff;
-        font-size: 1rem;
-        font-family: 'Avenir', Arial, Helvetica, sans-serif;
-        padding: 10px 10px 10px 80px;
-        box-sizing: border-box;
-        text-align: left;
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        z-index: 10000;
-    }
-    @keyframes fadeIn {
-        from { opacity: 0; }
-        to { opacity: 1; }
-    }
     </style>
     <meta charset="utf-8"/>
     <title>LINYER Arkitektur</title>
@@ -125,15 +86,15 @@
     <div class="img-columns">
         <div class="img-col">
             <div class="img-hover-container">
-                <img src="img/INDEX_01.jpg" alt="LINYER Bild" class="hover-img" />
+                <img src="img/INDEX_01.jpeg" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">JAPANSTUDIO 2: CARE HUBS<br/>Masterstudio vid ETHZ med Chie Konno, Wataru Doi, Yukari Iwata, Erik Fichter</div>
             </div>
             <div class="img-hover-container">
-                <img src="img/INDEX_02.jpg" alt="LINYER Bild" class="hover-img" />
+                <img src="img/INDEX_02.jpeg" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">FOKUSARBETE: KLIMATKÖK<br/>Kurs vid ETHZ med Prof. Momoyo Kaijima och åtta studenter<br/>Foto: Yuri Schmid</div>
             </div>
             <div class="img-hover-container">
-                <img src="img/INDEX_03.jpg" alt="LINYER Bild" class="hover-img" />
+                <img src="img/INDEX_03.jpeg" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">FOKUSARBETE: KLIMATKÖK<br/>Kurs vid ETHZ med Prof. Momoyo Kaijima och åtta studenter<br/>Foto: Yuri Schmid</div>
             </div>
             <div class="img-hover-container">
@@ -161,23 +122,23 @@
                 <div class="img-hover-text">HUS FÖR TVÅ BRÖDER<br/>Hjelmbacken, Sverige</div>
             </div>
             <div class="img-hover-container">
-                <img src="img/INDEX_20.gif" alt="LINYER Bild" class="hover-img" />
+                <img src="img/INDEX_20.png" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">SÄULENHALLEN: ÄNTLIGEN ETT CENTRUM FÖR ZÜRICH WEST<br/>Illustrationer för temanumret i juni 2025 av Hochparterre med Nando von Arb<br/>Zürich, Schweiz</div>
             </div>
             <div class="img-hover-container">
-                <img src="img/INDEX_21.gif" alt="LINYER Bild" class="hover-img" />
+                <img src="img/INDEX_21.jpeg" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">SÄULENHALLEN: ÄNTLIGEN ETT CENTRUM FÖR ZÜRICH WEST<br/>Illustrationer för temanumret i juni 2025 av Hochparterre med Nando von Arb<br/>Zürich, Schweiz</div>
             </div>
             <div class="img-hover-container">
-                <img src="img/INDEX_22.gif" alt="LINYER Bild" class="hover-img" />
+                <img src="img/INDEX_22.jpeg" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">SÄULENHALLEN: ÄNTLIGEN ETT CENTRUM FÖR ZÜRICH WEST<br/>Illustrationer för temanumret i juni 2025 av Hochparterre med Nando von Arb<br/>Zürich, Schweiz</div>
             </div>
             <div class="img-hover-container">
-                <img src="img/INDEX_23.gif" alt="LINYER Bild" class="hover-img" />
+                <img src="img/INDEX_23.jpeg" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">SÄULENHALLEN: ÄNTLIGEN ETT CENTRUM FÖR ZÜRICH WEST<br/>Illustrationer för temanumret i juni 2025 av Hochparterre med Nando von Arb<br/>Zürich, Schweiz</div>
             </div>
             <div class="img-hover-container">
-                <img src="img/INDEX_30.gif" alt="LINYER Bild" class="hover-img" />
+                <img src="img/INDEX_30.jpeg" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">"DER HOLLÄNDER"<br/>sammarbete Dalla Santa Birkeland Arkitektur<br/>Musikskolan, Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
@@ -189,15 +150,15 @@
                 <div class="img-hover-text">«DER HOLLÄNDER»<br/>med Dalla Santa Birkeland Arkitektur<br/>Musikskolan, Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
-                <img src="img/INDEX_33.png" alt="LINYER Bild" class="hover-img" />
+                <img src="img/INDEX_33.jpeg" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">"DER HOLLÄNDER»<br/>med Dalla Santa Birkeland Arkitektur<br/>Musikskolan, Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
-                <img src="img/INDEX_34.JPG" alt="LINYER Bild" class="hover-img" />
+                <img src="img/INDEX_34.jpeg" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">«DER HOLLÄNDER»<br/>med Dalla Santa Birkeland Arkitektur<br/>Musikskolan, Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
-                <img src="img/INDEX_34.JPG" alt="LINYER Bild" class="hover-img" />
+                <img src="img/INDEX_34.jpeg" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">«DER HOLLÄNDER»<br/>med Dalla Santa Birkeland Arkitektur<br/>Musikskolan, Cham, Schweiz</div>
             </div>
             <div class="img-hover-container">
@@ -205,15 +166,15 @@
                 <div class="img-hover-text">EN STAD UTAN SLAKTHUS?<br/>Diplom med Prof. Momoyo Kaijima, ETHZ<br/>Zürich, Schweiz</div>
             </div>
             <div class="img-hover-container">
-                <img src="img/INDEX_41.gif" alt="LINYER Bild" class="hover-img" />
+                <img src="img/INDEX_41.jpeg" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">EN STAD UTAN SLAKTHUS?<br/>Diplom med Prof. Momoyo Kaijima, ETHZ<br/>Zürich, Schweiz</div>
             </div>
             <div class="img-hover-container">
-                <img src="img/INDEX_42.gif" alt="LINYER Bild" class="hover-img" />
+                <img src="img/INDEX_42.jpeg" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">EN STAD UTAN SLAKTHUS?<br/>Diplom med Prof. Momoyo Kaijima, ETHZ<br/>Zürich, Schweiz</div>
             </div>
             <div class="img-hover-container">
-                <img src="img/INDEX_50.gif" alt="LINYER Bild" class="hover-img" />
+                <img src="img/INDEX_50.jpeg" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">ÅTERANVÄNDNING AV SNÄCKAN 8<br/>KTH, Stockholm, Sverige</div>
             </div>
             <div class="img-hover-container">
@@ -221,7 +182,7 @@
                 <div class="img-hover-text">ÅTERANVÄNDNING AV SNÄCKAN 8<br/>KTH, Stockholm, Sverige</div>
             </div>
             <div class="img-hover-container">
-                <img src="img/INDEX_70.jpg" alt="LINYER Bild" class="hover-img" />
+                <img src="img/INDEX_70.jpeg" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">KERAMIKPAVILJONG<br/>Stockholm, Sverige</div>
             </div>
             <div class="img-hover-container">
@@ -237,11 +198,11 @@
                 <div class="img-hover-text">GOTTSUNDA SKOG<br/>Sista omgången i tävlingen Europan 18, med Studio Era<br/>Gottsunda, Uppsala, Sverige</div>
             </div>
                 <div class="img-hover-container">
-                <img src="img/INDEX_82.gif" alt="LINYER Bild" class="hover-img" />
+                <img src="img/INDEX_82.jpeg" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">GOTTSUNDA SKOG<br/>Sista omgången i tävlingen Europan 18, med Studio Era<br/>Gottsunda, Uppsala, Sverige</div>
             </div>
                 <div class="img-hover-container">
-                <img src="img/INDEX_83.gif" alt="LINYER Bild" class="hover-img" />
+                <img src="img/INDEX_83.jpeg" alt="LINYER Bild" class="hover-img" />
                 <div class="img-hover-text">GOTTSUNDA SKOG<br/>Sista omgången i tävlingen Europan 18, med Studio Era<br/>Gottsunda, Uppsala, Sverige</div>
             </div>
                 <div class="img-hover-container">
