--- a/contact_de.html
+++ b/contact_de.html
@@ -19,7 +19,7 @@
             <a href="index.html" class="linyer-tab-link">LINYER</a>
         </div>
         <div class="linyer-tab-section linyer-tab-right">
-            <a href="contact_de.html" target="_blank" class="linyer-tab-link active-lang">INFO</a>
+            <a href="contact_de.html" class="linyer-tab-link active-lang">INFO</a>
             <div>contact@linyer.info</div>
         </div>
     </div>
