--- a/work_de.html
+++ b/work_de.html
@@ -79,7 +79,7 @@
             <a href="index.html" class="linyer-tab-link">LINYER</a>
         </div>
         <div class="linyer-tab-section linyer-tab-right">
-            <a href="contact_de.html" target="_blank" class="linyer-tab-link">INFO</a>
+            <a href="contact_de.html" class="linyer-tab-link">INFO</a>
             <div>contact@linyer.info</div>
         </div>
     </div>
