--- a/contact_de.html
+++ b/contact_de.html
@@ -43,14 +43,12 @@
         <br/>
         <br/>
     <span>KONTAKT</span>
-    <br/>
         contact@linyer.info<br/>
         4. OG Neue Hard 12<br/>
         CH-8004 Zürich<br/>
         <br/>
         <br/>
     <span>PROJEKTLISTE</span>
-        <br/>
         2504 - HUSA<br/>
         Renovation eines Blockhauses in Hälsingland, Schweden, 2025, Studie<br/>
         Bauherrschaft: Privat<br/>
@@ -113,7 +111,6 @@
         <br/>
         <br/>
     <span>LEHRE</span>
-    <br/>
         <a href="https://kaijima.arch.ethz.ch/news/call-for-entries-japan-studio-iii-seminar-week-25hs-feldis-veulden/">JAPAN STUDIO 3 "STONE, WOOD, SOIL"</a>
         Lehrassistent für den Entwurfskurs im Master am Lehrstuhl für Architectural Behaviorology, D-ARCH, ETHZ, 2025<br/>
         <br/>
@@ -134,17 +131,16 @@
         <br/>
         <br/>
     <span>PUBLIKATIONEN</span>
-    <br/>
         BERGDÖRFER UND IHRE MÖGLICHE ENTWICKLUNG<br/>
         Interview in der Lokalzeitung "Pöschtli" über das Japan Studio 3 "STONE, WOOD, SOIL" im Rahmen des Lehrprojekts Domleschg, Schweiz, 2025<br/>
         mit Stefan Kurath, Thomas Weiss, Michael Wagner, Oscar Buscon, Kees Christiaanse<br/>
         <br/>
-        <a href="https://www.hochparterre.ch/nachrichten/planung-staedtebau/die-saeulenhalle-endlich-ein-zentrum-fuer-zuerich-west">2407 - DIE SÄULENHALLE: Endlich ein Zentrum für Zürich West!</a>
+        <a href="https://www.hochparterre.ch/nachrichten/planung-staedtebau/die-saeulenhalle-endlich-ein-zentrum-fuer-zuerich-west">2407 - DIE SÄULENHALLE: ENDLICH EIN ZENTRUM FÜR ZÜRICH WEST!</a>
         Themenheft des Architekturmagazins Hochparterre, Zürich, Schweiz, 2025<br/>
         Arbeitsgruppe: Martin Hofer (Architekt und Immobilienfachmann, Leiter und Konzeptverfasser), Köbi Gantenbein (Soziologem, Leiter und Sekretär), Dominique Ghiggi (Landschaftsarchitektin, Ghiggi Paesaggi Landschaft und Städtebau, Zürich), Christoph Gysi (Präsident der "Vereinigung Industrict Zürich West, aus Industrie wird Kultur", Zürich), Christoph Kellenberger (Architekt und Gründungspartner Büro OOS, Zürich), Markus Knauss (Co-Geschäftsleiter des Verkehrs-Clubs der Schweiz und Gemeinderat), Maresa Kuhn (Stadt- und Projektentwicklerin im Büro Belebung & Begegnung, Zürich), Jordi Riegg (Raum- und Verkehrsplaner im Büro Rombo, Zürich), Alain Thierstein (Stadtentwickler, Delegierter Hamasil Stiftung), Hamasil Stiftung (Auftraggeberin, Finanzierung)<br/>
         <a href="https://nandovonarb.ch/">Illustrationen mit Nando von Arb</a>
         <br/>
-        <a href="https://www.furttaler.ch/aktuelles/detail?tx_news_pi1%5Baction%5D=detail&tx_news_pi1%5Bcontroller%5D=News&tx_news_pi1%5Bnews%5D=250118&cHash=5c51538c0a846e16fec72b9e55e24a98">"Das Interesse der Otelfingen freut uns"</a>
+        <a href="https://www.furttaler.ch/aktuelles/detail?tx_news_pi1%5Baction%5D=detail&tx_news_pi1%5Bcontroller%5D=News&tx_news_pi1%5Bnews%5D=250118&cHash=5c51538c0a846e16fec72b9e55e24a98">"DAS INTERESSE DER OTELFINGER FREUT UNS"</a>
         Interview in der Lokalzeitung "Furttaler" über das Japan Studio 2 "Care Hubs", Schweiz, 2024<br/>
         <br/>
         <a href="https://www.hochparterre.ch/campus/eine-stadt-ohne-schlachthof">2302 EINE STADT OHNE SCHLACHTHOF?</a>
