--- a/contact_sv.html
+++ b/contact_sv.html
@@ -37,13 +37,11 @@
         Lowis Gujer (f. 1995, Zürich CH) är arkitekt MSc Arch. ETHZ. Han avslutade sina studier vid ETHZ med ett examensarbete med titeln "Eine Stadt ohne Schlachthof?" under ledning av Prof. Momoyo Kaijima. Efter erfarenheter från arkitektkontor i Zürich, Stockholm och London arbetar han sedan början av 2024 vid Chair of Architectural Behaviorology. Där är han vetenskaplig assistent för designkursen i år 2, masterkursen "Japan Studio" och andra undervisningsprojekt.<br/>
         <br/>
     <span>KONTAKT</span>
-    <br/>
         contact@linyer.info<br/>
         4. OG Neue Hard 12<br/>
         CH-8004 Zürich<br/>
         <br/>
     <span>PROJEKTLISTA</span>
-    <br/>
         2504 - HUSA<br/>
         Renovering av ett timmerhus i Hälsingland, Sverige, 2025, studie<br/>
         Beställare: Privat<br/>
@@ -105,7 +103,6 @@
         Beställare: Privat<br/>
         <br/>
     <span>UNDERVISNING</span>
-    <br/>
         <a href="https://kaijima.arch.ethz.ch/news/call-for-entries-japan-studio-iii-seminar-week-25hs-feldis-veulden/">JAPAN STUDIO 3 "STONE, WOOD, SOIL"</a>
         Undervisningsassistent för masterkursen i design vid Chair of Architectural Behaviorology, D-ARCH, ETHZ, 2025<br/>
         <br/>
@@ -125,17 +122,16 @@
         Undervisningsassistent för designkursen i år 2 vid Chair of Architectural Behaviorology, D-ARCH, ETHZ, Zürich, Schweiz, 2024<br/>
         <br/>
     <span>PUBLIKATIONER</span>
-    <br/>
         BERGDÖRFER OCH DESS MÖJLIGA UTVECKLING<br/>
         Intervju i den lokala tidningen "Pöschtli" om Japan Studio 3 "STONE, WOOD, SOIL" inom ramen för undervisningsprojektet Domleschg, Schweiz, 2025<br/>
         med Stefan Kurath, Thomas Weiss, Michael Wagner, Oscar Buscon, Kees Christiaanse<br/>
         <br/>
-        <a href="https://www.hochparterre.ch/nachrichten/planung-staedtebau/die-saeulenhalle-endlich-ein-zentrum-fuer-zuerich-west">2407 - Die Säulenhalle: Äntligen ett centrum för Zürich West!</a>
+        <a href="https://www.hochparterre.ch/nachrichten/planung-staedtebau/die-saeulenhalle-endlich-ein-zentrum-fuer-zuerich-west">2407 - DIE SÄULENHALLE: ÄNTLIGEN ETT CENTRUM FÖR ZÜRICHWEST!</a>
         Temanummer av arkitekturtidskriften Hochparterre, Zürich, Schweiz, 2025<br/>
         Arbetsgrupp: Martin Hofer (arkitekt och fastighetsexpert, ledare och konceptförfattare), Köbi Gantenbein (sociolog, ledare och sekreterare), Dominique Ghiggi (landskapsarkitekt, Ghiggi Paesaggi, Zürich), Christoph Gysi (ordförande för "Vereinigung Industrict Zürich West, från industri till kultur", Zürich), Christoph Kellenberger (arkitekt och grundare av kontoret OOS, Zürich), Markus Knauss (medverkande direktör för Verkehrs-Club der Schweiz och kommunalpolitiker), Maresa Kuhn (stads- och projektutvecklare, Belebung & Begegnung, Zürich), Jordi Riegg (rum- och trafikplanerare, Rombo, Zürich), Alain Thierstein (stadsutvecklare, Hamasil-stiftelsen), Hamasil-stiftelsen (uppdragsgivare, finansiering)<br/>
         <a href="https://nandovonarb.ch/">Illustrationer med Nando von Arb</a>
         <br/>
-        <a href="https://www.furttaler.ch/aktuelles/detail?tx_news_pi1%5Baction%5D=detail&tx_news_pi1%5Bcontroller%5D=News&tx_news_pi1%5Bnews%5D=250118&cHash=5c51538c0a846e16fec72b9e55e24a98">"Das Interesse der Otelfingen freut uns"</a>
+        <a href="https://www.furttaler.ch/aktuelles/detail?tx_news_pi1%5Baction%5D=detail&tx_news_pi1%5Bcontroller%5D=News&tx_news_pi1%5Bnews%5D=250118&cHash=5c51538c0a846e16fec72b9e55e24a98">"DAS INTERESSE DER OTELFINGER FREUT UNS"</a>
         Intervju i lokalpressen "Furttaler" om Japan Studio 2 "Care Hubs", Schweiz, 2024<br/>
         <br/>
         <a href="https://www.hochparterre.ch/campus/eine-stadt-ohne-schlachthof">2302 - Eine Stadt ohne Schlachthof?</a>
